--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
         <h1>About Me</h1>
         <h2>My History</h2>
-            <p>Born in Colorade and grew up in rural Indiana. Currently living in a small town in IN with my boyfriend and our two cats. Constantly trying to learn. I hope to be a polyglot in the future.</p>
+            <p>Born in Colorado and grew up in rural Indiana. Currently living in a small town in IN with my boyfriend and our two cats. Constantly trying to learn. I hope to be a polyglot in the future.</p>
         <h2>Interesting Things</h2>
-            <p>I love to crochet and read. I lived in Tennessee for half a year.</p>
+            <p>I love to crochet and read. I lived in Tennessee for half a year. I'm learning to speak Spanish right now with plans to begin learning French once I become more confident in my Spanish fluency.</p>
         <h2>My Pets</h2>
-            <p>Two cats, Ash and Cinder, as well as a hedgehog, Basil. I've always wanted a conure, but they're pretty expensive. Grew up in a home full of animals, and love any and all fuzzy critters.</p>
+            <p>Two cats, Ash and Cinder, as well as a hedgehog, Basil. I've always wanted a conure, but they're pretty expensive. Grew up in a home full of animals, and love any and all fuzzy critters (but not spiders!).</p>
     </body>
 </html>
