--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,32 @@
                 </ul>
             </nav>
         </div>
-        <form>
-            <fieldset></fieldset>
+        <form method="post">
+            <fieldset>
+                <legend>Contact Form</legend>
+                <div class="survey">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="Your first and last name here:">
+                </div>
+                <div class="survey">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Your email address here:">
+                </div>
+                <div class="survey">
+                    <p>Do I know you?</p>
+                    <input type="checkbox" id="yes">
+                    <label for="yes">Yes</label>
+                    <input type="checkbox" id="no">
+                    <label for="no">No</label>
+                </div>
+                <div class="survey">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" placeholder="Type your message here:"></textarea>
+                </div>
+                <div class="survey">
+                    <button type="submit">submit</button>
+                </div>
+            </fieldset>
         </form>
     </body>
 </html>
