--- a/links.html
+++ b/links.html
@@ -8,17 +8,16 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li><a href="index.html"></a></li>
-                    <li><a href="contact.html"></a></li>
-                    <li><a href="links.html"></a></li>
+                    <li><a href="index.html">About Me</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                    <li><a href="links.html">Links</a></li>
                 </ul>
             </nav>
         </div>
         <h1>Links</h1>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="https://github.com/abernalub2283" target="_blank">GitHub</a></li>
+            <li><a href="https://www.appacademy.io/" target="_blank">Where I Studied Web Development</a></li>
         </ul>
     </body>
 </html>
